2011-05-24  Sam Weinig  <sam@webkit.org>

Reviewed by Beth Dakin.

        Can't scroll scaled page that has overflow:hidden on its root
        <rdar://problem/9029189>
        https://bugs.webkit.org/show_bug.cgi?id=61339

        Test: fast/events/scroll-in-scaled-page-with-overflow-hidden.html

        * page/FrameView.cpp:
        (WebCore::FrameView::applyOverflowToViewport):
        Scrollbars should be enabled for the viewport when scaled, even if overflow:hidden
        is specified.
2011-05-24  Sam Weinig  <sam@webkit.org>

        Reviewed by Beth Dakin.

        Can't scroll scaled page that has overflow:hidden on its root
        <rdar://problem/9029189>
        https://bugs.webkit.org/show_bug.cgi?id=61339

        * fast/events/scroll-in-scaled-page-with-overflow-hidden-expected.txt: Added.
        * fast/events/scroll-in-scaled-page-with-overflow-hidden.html: Added.


Canonical link: https://commits.webkit.org/76765@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87187 268f45cc-cd09-0410-ab3c-d52691b4dbfc